--- a/3.CSS_Intro/a.Css_Basics/Style.css
+++ b/3.CSS_Intro/a.Css_Basics/Style.css
@@ -4,7 +4,7 @@
 
 body{
     /* This is type selector and it selects only the specified html tag */
-    background-color: #F3f2ef;
+    background-color: #f3f2ef;
 }
 
 header{
@@ -22,4 +22,28 @@ header{
     font-size: 50px;
     text-decoration-line: underline;
     text-decoration-style: solid;
+}
+
+input[disabled]{
+    background-color: beige;
+}
+
+div span{
+    color:cadetblue;
+}
+
+h2 ~ h3{
+    color:brown;
+}
+
+a:hover{
+    /*this is pseudo class selector*/
+    text-decoration: none;
+}
+div::before{
+    /* this is pseudo element selector */
+    content: '...';
+}
+div::after{
+    content: '...';
 }
